--- a/templates/page2.html
+++ b/templates/page2.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
-{% block title %}Page 2: Ask for your favorite color{% endblock %}
+{% block title %}Page 2{% endblock %}
 
 {% block content %}
   <h1>Page 2: Ask for favorite color</h1>
 
- <form action="/page3" method="POST">
+ <form action="/page2" method="POST">
   Favorite Color:<br>
   <input type="text" name="favoriteColor">
   <input type="submit" value="Submit">
