--- a/templates/page3.html
+++ b/templates/page3.html
@@ -1,16 +1,14 @@
 {% extends "layout.html" %}
 
-{% block title %}Page 3--Now we know everything!{% endblock %}
+{% block title %}Page 3{% endblock %}
 
 {% block content %}
-  <h1>Now I know:</h1>
 
-<ul>
- <li> Your first name is: {{session[first_name]}} </li>
- <li> Your last name is: {{session[last_name]}} </li>
- <li> Your favorite color is: {{session[favorite_color]}} </li>
-</ul>
-
+ <form action="/page3" method="POST">
+  What is ... ?<br>
+  <input type="text" name="firstName">
+  <input type="submit" value="Submit">
+ </form>
 
 
 {% endblock %}
