--- a/templates/page1.html
+++ b/templates/page1.html
@@ -1,16 +1,13 @@
 {% extends "layout.html" %}
 
-{% block title %}Page 1: Name{% endblock %}
+{% block title %}Page 1{% endblock %}
 
 {% block content %}
   <h1>Page 1: What is your name?</h1>
 
- <form action="/page2" method="POST">
-  First name:<br>
+ <form action="/page1" method="POST">
+  What is ... ?<br>
   <input type="text" name="firstName">
-  <br>
-  Last name:<br>
-  <input type="text" name="lastName">
   <input type="submit" value="Submit">
  </form> 
 
