--- a/templates/final_page.html
+++ b/templates/final_page.html
@@ -8,7 +8,7 @@
   <h1>Now I know:</h1>
 
 <ul>
- <li> Your first name is: {{session[first_name]}} </li>
+ <li> {{session[first_name]}} got a ... %</li>
  <li> Your last name is: {{session[last_name]}} </li>
  <li> Your favorite color is: {{session[favorite_color]}} </li>
 </ul>
