--- a/templates/page1.html
+++ b/templates/page1.html
@@ -6,8 +6,8 @@
   <h1>Page 1: What is your name?</h1>
 
  <form action="/page1" method="POST">
-  What is ... ?<br>
-  <input type="text" name="firstName">
+  Full Name:<br>
+  <input type="text" name="fullName">
   <input type="submit" value="Submit">
  </form> 
 
