--- a/templates/page1.html
+++ b/templates/page1.html
@@ -3,11 +3,11 @@
 {% block title %}Page 1{% endblock %}
 
 {% block content %}
-  <h1>Page 1: What is your name?</h1>
+  <h1>Question #1</h1>
 
  <form action="/page1" method="POST">
-  Full Name:<br>
-  <input type="text" name="fullName">
+  What year did the first world war start?<br>
+  <input type="text" name="WW1">
   <input type="submit" value="Submit">
  </form> 
 
