--- a/templates/page2.html
+++ b/templates/page2.html
@@ -3,11 +3,11 @@
 {% block title %}Page 2{% endblock %}
 
 {% block content %}
-  <h1>Page 2: Ask for favorite color</h1>
+  <h1>Question #2</h1>
 
  <form action="/page2" method="POST">
-  Favorite Color:<br>
-  <input type="text" name="favoriteColor">
+  Who was the 16th president of the United States?<br>
+  <input type="text" name="16th president">
   <input type="submit" value="Submit">
  </form> 
 
