--- a/templates/page4.html
+++ b/templates/page4.html
@@ -3,10 +3,11 @@
 {% block title %}Page 4{% endblock %}
 
 {% block content %}
+  <h1>Question #4</h1>
 
  <form action="/page4" method="POST">
-  How many ... ?<br>
-  <input type="text" name="lastName">
+  What year did WW2 end?<br>
+  <input type="text" name="WW2">
   <input type="submit" value="Submit">
  </form> 
 
