--- a/templates/page3.html
+++ b/templates/page3.html
@@ -3,10 +3,11 @@
 {% block title %}Page 3{% endblock %}
 
 {% block content %}
+  <h1>Question #3</h1>
 
  <form action="/page3" method="POST">
-  What is ... ?<br>
-  <input type="text" name="firstName">
+  What year did the Titanic sink?<br>
+  <input type="text" name="Titanic">
   <input type="submit" value="Submit">
  </form>
 
