--- a/templates/page1.html
+++ b/templates/page1.html
@@ -7,7 +7,10 @@
 
  <form action="/page1" method="POST">
   What year did the first world war start?<br>
-  <input type="text" name="WW1">
+  <input type="text" name="WW1" value="1914" checked>1914<br>
+  <input type="text" name="WW1" value="1920" checked>1920<br>
+  <input type="text" name="WW1" value="1905" checked>1905<br>
+  <input type="text" name="WW1" value="1918" checked>1918<br>
   <input type="submit" value="Submit">
  </form> 
 
