--- a/templates/page2.html
+++ b/templates/page2.html
@@ -7,7 +7,10 @@
 
  <form action="/page2" method="POST">
   Who was the 16th president of the United States?<br>
-  <input type="text" name="16th president">
+  <input type="text" name="16th president" value="Abe" checked>Abraham Lincoln<br>
+  <input type="text" name="WW1" value="Polk" checked>James K. Polk<br>
+  <input type="text" name="WW1" value="VanBuren" checked>Martin Van Buren<br>
+  <input type="text" name="WW1" value="Jackson" checked>Andrew Jackson<br>
   <input type="submit" value="Submit">
  </form> 
 
