--- a/templates/page4.html
+++ b/templates/page4.html
@@ -7,6 +7,10 @@
 
  <form action="/page4" method="POST">
   What year did WW2 end?<br>
+  <input type="radio" name="WW2 year" value="1837" checked> 1837<br>
+  <input type="radio" name="WW2 year" value="1945" checked> 1945<br>
+  <input type="radio" name="WW2 year" value="1932" checked> 1932<br>
+  <input type="radio" name="WW2 year" value="1928" checked> 1928<br>
   <input type="text" name="WW2">
   <input type="submit" value="Submit">
  </form> 
