--- a/templates/page5.html
+++ b/templates/page5.html
@@ -9,7 +9,8 @@
   Which one of the seven ancient wonders is still standing today?<br>
   <input type="radio" name="ancient wonders" value="Pyramid" checked> Great pyramids of Giza<br>
   <input type="radio" name="ancient wonders" value="Lighthouse" checked> The lighthouse at Alexandria<br>
-  <input type="radio" name="ancient wonders" value="male" checked> Male<br>
+  <input type="radio" name="ancient wonders" value="Temple" checked> Temple of Artemis<br>
+  <input type="radio" name="ancient wonders" value="Gardens" checked> The Hanging Gardens of Babylon<br>
   <input type="submit" value="Submit">
  </form> 
 
