--- a/templates/page3.html
+++ b/templates/page3.html
@@ -7,10 +7,10 @@
 
  <form action="/page3" method="POST">
   What year did the Titanic sink?<br>
-  <input type="text" name="Titanic"> value="1912" checked>1912<br>
-  <input type="radio" name="gender" value="1914" checked> 1914<br>
-  <input type="radio" name="gender" value="1920" checked> 1920<br>
-  <input type="radio" name="gender" value="1910" checked> 1910<br>
+  <input type="radio" name="titanic" value="1912" checked>1912<br>
+  <input type="radio" name="titanic" value="1914" checked> 1914<br>
+  <input type="radio" name="titanic" value="1920" checked> 1920<br>
+  <input type="radio" name="titanic" value="1910" checked> 1910<br>
   <input type="submit" value="Submit">
  </form>
 
