--- a/templates/page2.html
+++ b/templates/page2.html
@@ -3,10 +3,9 @@
 {% block title %}Page 2{% endblock %}
 
 {% block content %}
-  <h1>Question #2</h1>
+  <h1>Who was the 16th president of the United States?</h1>
 
- <form action="/page2" method="POST">
-  Who was the 16th president of the United States?<br>
+ <form action="/page3" method="POST">
   <input type="radio" name="pres" value="Abe" checked>Abraham Lincoln<br>
   <input type="radio" name="pres" value="Polk" checked>James K. Polk<br>
   <input type="radio" name="pres" value="VanBuren" checked>Martin Van Buren<br>
