--- a/templates/page4.html
+++ b/templates/page4.html
@@ -3,10 +3,9 @@
 {% block title %}Page 4{% endblock %}
 
 {% block content %}
-  <h1>Question #4</h1>
+  <h1>What year did WW2 end?</h1>
 
- <form action="/page4" method="POST">
-  What year did WW2 end?<br>
+ <form action="/page5" method="POST">
   <input type="radio" name="WW2" value="1837" checked> 1837<br>
   <input type="radio" name="WW2" value="1945" checked> 1945<br>
   <input type="radio" name="WW2" value="1932" checked> 1932<br>
