--- a/templates/page1.html
+++ b/templates/page1.html
@@ -3,10 +3,9 @@
 {% block title %}Page 1{% endblock %}
 
 {% block content %}
-  <h1>Question #1</h1>
+  <h1>What year did the first world war start?</h1>
 
- <form action="/page1" method="POST">
-  What year did the first world war start?<br>
+ <form action="/page2" method="POST">
   <input type="radio" name="WW1" value="1914" checked>1914<br>
   <input type="radio" name="WW1" value="1920" checked>1920<br>
   <input type="radio" name="WW1" value="1905" checked>1905<br>
