--- a/templates/page3.html
+++ b/templates/page3.html
@@ -3,10 +3,9 @@
 {% block title %}Page 3{% endblock %}
 
 {% block content %}
-  <h1>Question #3</h1>
+  <h1>What year did the Titanic sink?</h1>
 
- <form action="/page3" method="POST">
-  What year did the Titanic sink?<br>
+ <form action="/page4" method="POST">
   <input type="radio" name="titanic" value="1912" checked>1912<br>
   <input type="radio" name="titanic" value="1914" checked> 1914<br>
   <input type="radio" name="titanic" value="1920" checked> 1920<br>
