--- a/templates/final_page.html
+++ b/templates/final_page.html
@@ -5,12 +5,10 @@
 {% block content %}  
   
   
-  <h1>Now I know:</h1>
+  <h1>Your Score</h1>
 
 <ul>
- <li> {{session[first_name]}} got a ... %</li>
- <li> Your last name is: {{session[last_name]}} </li>
- <li> Your favorite color is: {{session[favorite_color]}} </li>
+ <li> You got a {{per}} %</li>
 </ul>
 
 <div id="footer">
