--- a/templates/page4.html
+++ b/templates/page4.html
@@ -6,10 +6,10 @@
   <h1>What year did WW2 end?</h1>
 
  <form action="/page5" method="POST">
-  <input type="radio" name="WW2" value="1837" checked> 1837<br>
-  <input type="radio" name="WW2" value="1945" checked> 1945<br>
-  <input type="radio" name="WW2" value="1932" checked> 1932<br>
-  <input type="radio" name="WW2" value="1928" checked> 1928<br>
+  <input type="radio" name="WW2" value="1837" > 1837<br>
+  <input type="radio" name="WW2" value="1945" > 1945<br>
+  <input type="radio" name="WW2" value="1932" > 1932<br>
+  <input type="radio" name="WW2" value="1928" > 1928<br>
   <input type="submit" value="Submit">
  </form> 
 
