--- a/static/style.css
+++ b/static/style.css
@@ -1,15 +1,13 @@
 body {
-
-    background-color: #ffffcc;
-    color: black;
+  background-color: lightblue;
 }
 
-div#footer {
-    
-    font-size: 0.8em;
-    background-color: #ccffff;
-    border: 4px solid grey;
-    margin-top: 3em;
-    padding: 1em;
+h1 {
+  color: white;
+  text-align: center;
 }
 
+p {
+  color: white;
+  font-size: 20px;
+}
