--- a/templates/page3.html
+++ b/templates/page3.html
@@ -6,10 +6,10 @@
   <h1>What year did the Titanic sink?</h1>
 
  <form action="/page4" method="POST">
-  <input type="radio" name="titanic" value="1912" checked>1912<br>
-  <input type="radio" name="titanic" value="1914" checked> 1914<br>
-  <input type="radio" name="titanic" value="1920" checked> 1920<br>
-  <input type="radio" name="titanic" value="1910" checked> 1910<br>
+  <input type="radio" name="titanic" value="1912" >1912<br>
+  <input type="radio" name="titanic" value="1914" > 1914<br>
+  <input type="radio" name="titanic" value="1920" > 1920<br>
+  <input type="radio" name="titanic" value="1910" > 1910<br>
   <input type="submit" value="Submit">
  </form>
 
