--- a/templates/page5.html
+++ b/templates/page5.html
@@ -5,11 +5,11 @@
 {% block content %}
   <h1>Which one of the seven ancient wonders is still standing today?</h1>
 
- <form action="/final_page" method="POST">
-  <input type="radio" name="wonders" value="Pyramid" checked>Great pyramids of Giza<br>
-  <input type="radio" name="wonders" value="Lighthouse" checked> The lighthouse at Alexandria<br>
-  <input type="radio" name="wonders" value="Temple" checked> Temple of Artemis<br>
-  <input type="radio" name="wonders" value="Gardens" checked> The Hanging Gardens of Babylon<br>
+ <form action="/end" method="POST">
+  <input type="radio" name="wonders" value="Pyramid">Great pyramids of Giza<br>
+  <input type="radio" name="wonders" value="Lighthouse"> The lighthouse at Alexandria<br>
+  <input type="radio" name="wonders" value="Temple"> Temple of Artemis<br>
+  <input type="radio" name="wonders" value="Gardens"> The Hanging Gardens of Babylon<br>
   <input type="submit" value="Submit">
  </form> 
 
