--- a/templates/final_page.html
+++ b/templates/final_page.html
@@ -9,6 +9,15 @@
 
 <ul>
  <li> You got a {{per}} %</li>
+ {{one}}
+ <br>
+ {{two}}
+ <br>
+ {{three}}
+ <br>
+ {{four}}
+ <br>
+ {{five}}
 </ul>
 
 <div id="footer">
