--- a/templates/page2.html
+++ b/templates/page2.html
@@ -6,10 +6,10 @@
   <h1>Who was the 16th president of the United States?</h1>
 
  <form action="/page3" method="POST">
-  <input type="radio" name="pres" value="Abe" >Abraham Lincoln<br>
-  <input type="radio" name="pres" value="Polk" >James K. Polk<br>
-  <input type="radio" name="pres" value="VanBuren" >Martin Van Buren<br>
-  <input type="radio" name="pres" value="Jackson" >Andrew Jackson<br>
+  <input type="radio" name="pres" value="Abraham Lincoln" >Abraham Lincoln<br>
+  <input type="radio" name="pres" value="James K. Polk" >James K. Polk<br>
+  <input type="radio" name="pres" value="Martin Van Buren" >Martin Van Buren<br>
+  <input type="radio" name="pres" value="Andrew Jackson" >Andrew Jackson<br>
   <input type="submit" value="Submit">
  </form> 
 
