--- a/templates/page5.html
+++ b/templates/page5.html
@@ -6,7 +6,7 @@
   <h1>Which one of the seven ancient wonders is still standing today?</h1>
 
  <form action="/end" method="POST">
-  <input type="radio" name="wonders" value="Great pyramids of Giza">Great pyramid of Giza<br>
+  <input type="radio" name="wonders" value="Great pyramid of Giza">Great pyramid of Giza<br>
   <input type="radio" name="wonders" value="The lighthouse at Alexandria"> The lighthouse at Alexandria<br>
   <input type="radio" name="wonders" value="Temple of Artemis"> Temple of Artemis<br>
   <input type="radio" name="wonders" value="The Hanging Gardens of Babylon"> The Hanging Gardens of Babylon<br>
